혜연-데이터확인

--- a/데이터확인.ipynb
+++ b/데이터확인.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -205,20 +205,20 @@
        "[38309 rows x 8 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path = \"data/01_제공데이터/\"\n",
+    "path = \"maindata/01_제공데이터/\"\n",
     "df = pd.read_excel(path+'2020 빅콘테스트 데이터분석분야-챔피언리그_2019년 실적데이터.xlsx',skiprows = [0] )\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "max                 NaN    NaN  7.930000e+06  3.220090e+08  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "max       60.000000  100849.000000  202513.000000  7.930000e+06  3.220090e+08"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
        "[38309 rows x 2 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
        "max      0.0  NaN"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1010,7 @@
        "[937 rows x 8 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1391,13 +1391,384 @@
        "Length: 262, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[df[\"상품군\"]==\"잡화\"][['상품명']].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "판매단가   \n",
+       "59900      1588\n",
+       "39900      1419\n",
+       "59000      1280\n",
+       "89000      1137\n",
+       "49900      1136\n",
+       "           ... \n",
+       "350000        2\n",
+       "1390000       2\n",
+       "1385000       2\n",
+       "850000        2\n",
+       "2390000       2\n",
+       "Length: 390, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"판매단가\"] != 0][['판매단가']].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['일시불 LG전자 매직스페이스 냉장고', '무이자 LG전자 매직스페이스 냉장고',\n",
+       "       '무이자 LG 울트라HD TV 55UK6800HNC', '일시불 LG 울트라HD TV 65UK6800HNC',\n",
+       "       '무이자 LG 울트라HD TV 65UK6800HNC', '일시불 LG 울트라HD TV 70UK7400KNA',\n",
+       "       '무이자 LG 울트라HD TV 70UK7400KNA', '일시불 삼성 UHD TV UN65NU7010FXKR',\n",
+       "       '무이자 삼성 UHD TV UN65NU7010FXKR', '일시불 삼성 UHD TV UN75NU7010FXKR',\n",
+       "       '무이자 삼성 UHD TV UN75NU7010FXKR', '일시불 LG 울트라HD TV 70UK6800HNC',\n",
+       "       '무이자 LG 울트라HD TV 70UK6800HNC', '무이자 삼성 유로피안 냉장고RS82M6000S8',\n",
+       "       '무이자 LG 노트북 그램 15인치 15Z980-L.AR1DK',\n",
+       "       '일시불 LG 노트북 그램 15인치 15Z980-G.AR3DK',\n",
+       "       '무이자 LG 노트북 그램 15인치 15Z980-G.AR3DK',\n",
+       "       '(일)한샘 HG 화이트 실버슬림 붙박이장(4.2m)', '(무)한샘 HG 화이트 실버슬림 붙박이장(4.2m)',\n",
+       "       '(무)3인용 한샘 뉴퍼스티지R 리클라이너', '(일)4인용 한샘 뉴퍼스티지R 리클라이너',\n",
+       "       '(무)4인용 한샘 뉴퍼스티지R 리클라이너', '일시불 LG 울트라HD TV 75UK6200KNB',\n",
+       "       '무이자 LG 울트라HD TV 75UK6200KNB', '일시불 LG 휘센 에어컨 위너 FQ17V8WWJ2(2in1)',\n",
+       "       '무이자 LG 휘센 에어컨 위너 FQ17V8WWJ2(2in1)',\n",
+       "       'LG 휘센 에어컨 위너 FQ17V9WWA1(스탠드)', '무이자 LG 휘센 에어컨 위너 FQ17V8WWJ1(스탠드)',\n",
+       "       '일시불 삼성 무풍슬림 홈멀티  에어컨  AF16R5773WSR',\n",
+       "       '무이자 삼성 무풍슬림 홈멀티  에어컨  AF16R5773WSR',\n",
+       "       '일시불 삼성 무풍슬림 스탠드  에어컨  AF16R5773WSK',\n",
+       "       '무이자 삼성 무풍슬림 스탠드  에어컨  AF16R5773WSK', '무) 한샘 하이바스 내추럴 기본형',\n",
+       "       '일)한샘 하이바스 내추럴 기본형', '무)한샘 하이바스 내추럴 하부장형', '일)한샘 하이바스 내추럴 하부장형',\n",
+       "       '무)한샘 하이바스 내추럴 기본형 + 키큰장', '일)한샘 하이바스 내추럴 기본형 + 키큰장',\n",
+       "       '무)한샘 하이바스 내추럴 하부장 + 키큰장', '일)한샘 하이바스 내추럴 하부장 + 키큰장',\n",
+       "       '일시불 삼성 UHD TV UN65NU7050F', '무이자 삼성 UHD TV UN65NU7050F',\n",
+       "       '일시불 삼성 UHD TV UN75NU7050F', '무이자 삼성 UHD TV UN75NU7050F',\n",
+       "       '일시불 삼성 5도어 냉장고 H9000 RH81M8011S9',\n",
+       "       '무이자 삼성 5도어 냉장고 H9000 RH81M8011S9', '일시불 LG스타일러 의류관리기  (5벌)S5BB',\n",
+       "       '무이자 LG스타일러 의류관리기  (5벌)S5BB', '무이자 LG스타일러 의류관리기',\n",
+       "       '(무) 한샘 하이바스 내추럴 기본형', '(일)한샘 하이바스 내추럴 기본형', '(무)한샘 하이바스 내추럴 하부장형',\n",
+       "       '(일)한샘 하이바스 내추럴 하부장형', '(무)한샘 하이바스 내추럴 기본형 + 키큰장',\n",
+       "       '(일)한샘 하이바스 내추럴 기본형 + 키큰장', '(무)한샘 하이바스 내추럴 하부장 + 키큰장',\n",
+       "       '(일)한샘 하이바스 내추럴 하부장 + 키큰장', '(무)장수흙침대 Q',\n",
+       "       '일시불 LG 휘센 씽큐 에어컨 2IN1형 FQ17V9KWA2',\n",
+       "       '무이자 LG 휘센 씽큐 에어컨 2IN1형 FQ17V9KWA2',\n",
+       "       '일시불 LG 휘센 씽큐 에어컨 스탠드형FQ17V9KWA1',\n",
+       "       '무이자 LG 휘센 씽큐 에어컨 스탠드형FQ17V9KWA1', '프라다 비텔로 피닉스 토트백',\n",
+       "       '마르엘라로사티 휘메일 풀스킨 밍크 후드코트', '(일)한샘 모데나 프리미엄 슬라이딩 붙박이장(3.2m)',\n",
+       "       '(무)한샘 모데나 프리미엄 슬라이딩 붙박이장(3.2m)', '(일)한샘 모데나 프리미엄 슬라이딩 붙박이장(4.2m)',\n",
+       "       '(무)한샘 모데나 프리미엄 슬라이딩 붙박이장(4.2m)', '무)이누스바스 시공패키지', '일)이누스바스 시공패키지',\n",
+       "       '(무)한샘 페이지 리클라이너 소파(4인용)',\n",
+       "       '(삼성카드 6월 5%)무이자 LG 울트라HD TV 75UK6200KNB',\n",
+       "       '일시불 LG 휘센 싱큐 에어컨 2IN1형 FQ19V9KWA2',\n",
+       "       '무이자 LG 휘센 싱큐 에어컨 2IN1형 FQ19V9KWA2',\n",
+       "       '일시불 LG 휘센 씽큐 에어컨 스탠드형FQ19V9KWA1',\n",
+       "       '무이자 LG 휘센 씽큐 에어컨 스탠드형FQ19V9KWA1', '마르엘라로사티 나파 휘메일 풀스킨 밍크하프코트 1종',\n",
+       "       '일시불 삼성 무풍클래식 홈멀티에어컨 AF17R7573WZR',\n",
+       "       '무이자 삼성 무풍클래식 홈멀티에어컨 AF17R7573WZR',\n",
+       "       '일시불 삼성 무풍클래식 스탠드에어컨 AF17R7573WZK',\n",
+       "       '무이자 삼성 무풍클래식 스탠드에어컨 AF17R7573WZK',\n",
+       "       '일시불 삼성 무풍클래식 홈멀티에어컨 AF19R7573WZR',\n",
+       "       '무이자 삼성 무풍클래식 홈멀티에어컨 AF19R7573WZR',\n",
+       "       '일시불 삼성 무풍클래식 스탠드에어컨 AF19R7573WZK',\n",
+       "       '무이자 삼성 무풍클래식 스탠드에어컨AF19R7573WZK', '루이띠에 순금 샤이닝 러브 목걸이 35g+골드바 1g',\n",
+       "       '루이띠에 순금 샤이닝 러브 팔찌 35g+골드바 1g', '루이띠에 순금 크로스 트리플 목걸이 18g+골드바 1g',\n",
+       "       '루이띠에 순금 크로스 트리플 팔찌 18g+골드바 1g', '루이띠에 순금 미라클 트리플 링 15g+골드바 1g',\n",
+       "       '루이띠에 순금 신디스틱 목걸이 13g+골드바 1g', '루이띠에 순금 신디스틱 팔찌 13g+골드바 1g',\n",
+       "       '일시불 LG 울트라HD TV 75UK7400KNA', '무이자 LG 울트라HD TV 75UK7400KNA',\n",
+       "       '일시불 LG전자 노크온 매직스페이스 냉장고 S831SN75',\n",
+       "       '무이자 LG전자 노크온 매직스페이스 냉장고 S831SN75', '[루이띠에] 18K 베르니아 주얼리 세트',\n",
+       "       '[루이띠에] 18K 베르니아 목걸이 팔찌 세트', '[루이띠에] 18K 베르니아 팔찌 반지 세트',\n",
+       "       '일시불 삼성 4도어 푸드쇼케이스 냉장고 RH81R8011G2 (+선풍기)',\n",
+       "       '무이자 삼성 4도어 푸드쇼케이스 냉장고 RH81R8011G2 (+선풍기)',\n",
+       "       '마르엘라로사티 휘메일 풀스킨 하이넥 밍크코트 1종', '프라다 비텔로 피닉스 모터백',\n",
+       "       '프라다 비텔로 피닉스 보스턴', '프라다 미란다백', '프라다 피닉스 토트 숄더백', '프라다 사피아노 스퀘어백',\n",
+       "       '프라다 테스토 체인 쇼퍼백', '[루이띠에] 18k 인피니티러브 주얼리 세트', '프라다 비텔로 라운드 토트 숄더백',\n",
+       "       '일시불 코지마 안마의자 오딧세이', '무이자 코지마 안마의자 오딧세이', '일시불 브람스안마의자 럭셔리',\n",
+       "       '무이자 브람스안마의자 럭셔리', '[루이띠에] 18k 그레이스 골드 주얼리 세트',\n",
+       "       '[루이띠에] 18k 그레이스 골드 목걸이팔찌 세트', '[루이띠에] 18k 그레이스 골드 팔찌반지 세트',\n",
+       "       '일시불 삼성 UHD TV UN65RU7150FXKR', '무이자 삼성 UHD TV UN65RU7150FXKR',\n",
+       "       '일시불 삼성 UHD TV UN75RU7150FXKR', '무이자 삼성 UHD TVUN75RU7150FXKR',\n",
+       "       '467L_딤채김치냉장고', '마르엘라로사티 휘메일 풀스킨 밍크 후드코트(앱할인)',\n",
+       "       '(무)보루네오 델라 원목 베드룸 세트1(프레임+매트리스+화장대+협탁)',\n",
+       "       '일시불 LG 울트라HD TV 65UM7900BNA', '무이자 LG 울트라HD TV 65UM7900BNA',\n",
+       "       '일시불 LG 울트라HD TV 75UM7900BNA', '무이자 LG 울트라HD TV 75UM7900BNA',\n",
+       "       '무이자 삼성 국내제조 4도어 푸드쇼케이스 냉장고 RH81R8011G2 (+청소기)',\n",
+       "       '일시불 국내제조 삼성 4도어 푸드쇼케이스 냉장고 RH81R8011G2 (+청소기)',\n",
+       "       '[SET]이조농방 보령황토 흙침대 퀸사이즈+카우치소파', '생쥴랑 18K코코 천연다이아 목걸이팔찌 세트',\n",
+       "       '[루이띠에] 순금 41.25g 헤라 컬렉션', '[루이띠에] 순금 11.25g 헤라 반지',\n",
+       "       '[루이띠에] 순금 13g 신디스틱 목걸이', '[루이띠에] 순금 13g 신디스틱 팔찌',\n",
+       "       '[루이띠에] 순금 70g 골드바', '[루이띠에] 순금 37.5g 골드바', '(1등급)467L_딤채김치냉장고',\n",
+       "       '초특가 무이자 삼성 UHD TVUN75RU7150FXKR',\n",
+       "       '초특가 일시불 삼성 UHD TVUN75RU7150FXKR',\n",
+       "       '초특가 무이자 삼성 UHD TV UN65RU7150FXKR',\n",
+       "       '초특가 일시불 삼성 UHD TV UN65RU7150FXKR', '(일)이누스바스 시공패키지',\n",
+       "       '(무)이누스바스 시공패키지', '[루이띠에]18k 샤인클로버 주얼리 세트',\n",
+       "       '[루이띠에]18k 샤인클로버 목걸이팔찌 세트', '[루이띠에]18k 샤인클로버 팔찌반지  세트',\n",
+       "       '[루이띠에]18k 샤인클로버 팔찌', '유캐슬 마리노 침실가구 풀세트 (매트리스포함)', '(무)장수흙침대 퀸',\n",
+       "       '(일)장수 클래식 흙카우치', '(무)장수 클래식 흙카우치', 'LG 울트라HD TV 65UM7900BNA',\n",
+       "       'LG 울트라HD TV 75UM7900BNA', '일시불 LG트롬 건조기 16kg RH16WN(화이트)',\n",
+       "       '무이자 LG트롬 건조기 16kg RH16WN(화이트)', '일시불 LG트롬 건조기 14kg RH14VN(실버)',\n",
+       "       '무이자 LG트롬 건조기 14kg RH14VN(실버)', '일시불 LG트롬 건조기 14kg RH14WN(화이트)',\n",
+       "       '무이자 LG트롬 건조기 14kg RH14WN(화이트)', '구찌 인터로킹 GG 탑핸들 체인 숄더 라지',\n",
+       "       '구찌 인터로킹 GG 탑핸들 체인 숄더 스몰', '버버리 밀덴홀 체인 크로스백 미듐',\n",
+       "       '무이자 삼성 4도어 냉장고 T9000 RF84R9003S8+공기청정기',\n",
+       "       '일시불 삼성 4도어 냉장고 T9000 RF84R9003S8+공기청정기',\n",
+       "       '무이자 초특가 삼성5도어냉장고 T9000(RF84R9203S8) +시카고커트러리5p세트',\n",
+       "       '일시불 삼성5도어냉장고 T9000 (RF84R9203S8) +공기청정기 (AX34R3020WWD)',\n",
+       "       '마르엘라로사티 나파 휘메일 풀스킨 밍크하프코트(11월)'], dtype=object)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"판매단가\"] >= 1390000][\"상품명\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['방송일시', '노출(분)', '마더코드', '상품코드', '상품명', '상품군', '판매단가', '취급액'], dtype='object')"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>방송일시</th>\n",
+       "      <th>노출(분)</th>\n",
+       "      <th>마더코드</th>\n",
+       "      <th>상품코드</th>\n",
+       "      <th>상품명</th>\n",
+       "      <th>상품군</th>\n",
+       "      <th>판매단가</th>\n",
+       "      <th>취급액</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16304</th>\n",
+       "      <td>2019-06-02 21:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100148</td>\n",
+       "      <td>200456</td>\n",
+       "      <td>무이자 LG 울트라HD TV 75UK6200KNB</td>\n",
+       "      <td>가전</td>\n",
+       "      <td>3090000</td>\n",
+       "      <td>50000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5027</th>\n",
+       "      <td>2019-02-21 22:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100577</td>\n",
+       "      <td>201706</td>\n",
+       "      <td>무이자 삼성 노트북 9 메탈 기본형 NT900X5J-K14</td>\n",
+       "      <td>가전</td>\n",
+       "      <td>1089000</td>\n",
+       "      <td>50000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5023</th>\n",
+       "      <td>2019-02-21 22:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100577</td>\n",
+       "      <td>201706</td>\n",
+       "      <td>무이자 삼성 노트북 9 메탈 기본형 NT900X5J-K14</td>\n",
+       "      <td>가전</td>\n",
+       "      <td>1089000</td>\n",
+       "      <td>50000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27378</th>\n",
+       "      <td>2019-09-16 11:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100786</td>\n",
+       "      <td>202310</td>\n",
+       "      <td>[루이띠에] 18K 베르니아 팔찌 반지 세트</td>\n",
+       "      <td>잡화</td>\n",
+       "      <td>2030000</td>\n",
+       "      <td>50000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20812</th>\n",
+       "      <td>2019-07-15 22:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100203</td>\n",
+       "      <td>200711</td>\n",
+       "      <td>(일)[보루네오] 피올레 천연소가죽 소파 6인용</td>\n",
+       "      <td>가구</td>\n",
+       "      <td>1199000</td>\n",
+       "      <td>50000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38304</th>\n",
+       "      <td>2020-01-01 00:20:00</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>100073</td>\n",
+       "      <td>200196</td>\n",
+       "      <td>삼성화재 행복한파트너 주택화재보험(1912)</td>\n",
+       "      <td>무형</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38305</th>\n",
+       "      <td>2020-01-01 00:40:00</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>100073</td>\n",
+       "      <td>200196</td>\n",
+       "      <td>삼성화재 행복한파트너 주택화재보험(1912)</td>\n",
+       "      <td>무형</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38306</th>\n",
+       "      <td>2020-01-01 01:00:00</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>100073</td>\n",
+       "      <td>200196</td>\n",
+       "      <td>삼성화재 행복한파트너 주택화재보험(1912)</td>\n",
+       "      <td>무형</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38307</th>\n",
+       "      <td>2020-01-01 01:20:00</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>100490</td>\n",
+       "      <td>201478</td>\n",
+       "      <td>더케이 예다함 상조서비스(티포트)</td>\n",
+       "      <td>무형</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38308</th>\n",
+       "      <td>2020-01-01 01:40:00</td>\n",
+       "      <td>17.166667</td>\n",
+       "      <td>100490</td>\n",
+       "      <td>201478</td>\n",
+       "      <td>더케이 예다함 상조서비스(티포트)</td>\n",
+       "      <td>무형</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>38309 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     방송일시      노출(분)    마더코드    상품코드  \\\n",
+       "16304 2019-06-02 21:20:00        NaN  100148  200456   \n",
+       "5027  2019-02-21 22:20:00        NaN  100577  201706   \n",
+       "5023  2019-02-21 22:00:00        NaN  100577  201706   \n",
+       "27378 2019-09-16 11:00:00        NaN  100786  202310   \n",
+       "20812 2019-07-15 22:00:00        NaN  100203  200711   \n",
+       "...                   ...        ...     ...     ...   \n",
+       "38304 2020-01-01 00:20:00  20.000000  100073  200196   \n",
+       "38305 2020-01-01 00:40:00  20.000000  100073  200196   \n",
+       "38306 2020-01-01 01:00:00  20.000000  100073  200196   \n",
+       "38307 2020-01-01 01:20:00  20.000000  100490  201478   \n",
+       "38308 2020-01-01 01:40:00  17.166667  100490  201478   \n",
+       "\n",
+       "                                    상품명 상품군     판매단가      취급액  \n",
+       "16304       무이자 LG 울트라HD TV 75UK6200KNB  가전  3090000  50000.0  \n",
+       "5027   무이자 삼성 노트북 9 메탈 기본형 NT900X5J-K14  가전  1089000  50000.0  \n",
+       "5023   무이자 삼성 노트북 9 메탈 기본형 NT900X5J-K14  가전  1089000  50000.0  \n",
+       "27378          [루이띠에] 18K 베르니아 팔찌 반지 세트  잡화  2030000  50000.0  \n",
+       "20812        (일)[보루네오] 피올레 천연소가죽 소파 6인용  가구  1199000  50000.0  \n",
+       "...                                 ...  ..      ...      ...  \n",
+       "38304          삼성화재 행복한파트너 주택화재보험(1912)  무형        0      NaN  \n",
+       "38305          삼성화재 행복한파트너 주택화재보험(1912)  무형        0      NaN  \n",
+       "38306          삼성화재 행복한파트너 주택화재보험(1912)  무형        0      NaN  \n",
+       "38307                더케이 예다함 상조서비스(티포트)  무형        0      NaN  \n",
+       "38308                더케이 예다함 상조서비스(티포트)  무형        0      NaN  \n",
+       "\n",
+       "[38309 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(\"취급액\")"
    ]
   },
   {
