데이터시각화 코드변경

--- a/시청률데이터 날씨 요일추가- 0905.ipynb
+++ b/시청률데이터 날씨 요일추가- 0905.ipynb
@@ -4647,9 +4647,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py37_tf1.15",
    "language": "python",
-   "name": "python3"
+   "name": "py37"
   },
   "language_info": {
    "codemirror_mode": {
