--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -368,6 +368,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -3068,7 +3069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
